project/project-app/k8s-manifests/calculator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
spec:
  selector:
    matchLabels:
      app: calculator
  replicas: 1
  template:
    metadata:
      labels:
        app: calculator
    spec:
      imagePullSecrets:
      - name: ${GITHUB_REGISTRY_SECRET}
      containers:
      - name: calculator
        image: ${REGISTRY}/web-calculator:${RELEASE_VER}
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "100m"        
        ports:
        - containerPort: 9095
