project/project-app/k8s-manifests/calculator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator
spec:
  selector:
    app: calculator
  type: ClusterIP
  ports:
  - port: 9095
    targetPort: 9090
    # nodePort: 30100
