project/project-app/k8s-manifests/calculator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator
  annotations:    
spec:
  rules:
  - host: "calculator"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: calculator
            port:
              number: 9095
